--- a/topologies/base_topo.yml
+++ b/topologies/base_topo.yml
@@ -421,7 +421,7 @@ topologies:
     access: standard
     disable_links: [labguides, jenkins, lab_grading]
     labguides: self
-  training-level-1-3:
+  training-level-3v2:
     dev:
       veos:
         cpu: 40
@@ -438,7 +438,7 @@ topologies:
               - 4.29.1F
     prod:
       veos:
-        cpu: 54
+        cpu: 60
         ram: 110
         cvp:
           2022.3.1:
@@ -450,10 +450,10 @@ topologies:
             image: base-veos-training-l1-3-2022-3-4291-20230424-175728
             eos:
               - 4.29.1F
-    desc: 'New Training Level 1-3 Topo. TESTING ONLY'
-    name: 'Training - Level 1-3 TESTING ONLY'
-    title: 'Training Level 1-3 Lab. TESTING ONLY'
-    disk_size: 500
+    desc: 'Training Level 3 v2.'
+    name: 'Training Level 3 v2.'
+    title: 'Training Level 3 v2.'
+    disk_size: 300
     access: standard
     disable_links: [labguides, jenkins, lab_grading]
     labguides: self
