--- a/topologies/base_topo.yml
+++ b/topologies/base_topo.yml
@@ -450,9 +450,45 @@ topologies:
             image: base-veos-training-l1-3-2022-3-4291-20230424-175728
             eos:
               - 4.29.1F
-    desc: 'Training Level 3 v2.'
-    name: 'Training Level 3 v2.'
-    title: 'Training Level 3 v2.'
+    desc: 'Training Level 3 v2'
+    name: 'Training Level 3 v2'
+    title: 'Training Level 3 v2'
+    disk_size: 300
+    access: standard
+    disable_links: [labguides, jenkins, lab_grading]
+    labguides: self
+  training-level-1-3:
+    dev:
+      veos:
+        cpu: 40
+        ram: 110
+        cvp:
+          2022.3.1:
+            resources:
+              cpu: 48
+              ram: 110
+            branch: nested/2022.3
+            orderable: true
+            image: base-veos-training-l1-3-2022-3-4291-20230424-175728
+            eos:
+              - 4.29.1F
+    prod:
+      veos:
+        cpu: 60
+        ram: 110
+        cvp:
+          2022.3.1:
+            resources:
+              cpu: 48
+              ram: 64
+            branch: 2021.3-3.18-l1-3
+            orderable: true
+            image: base-veos-training-l1-3-2022-3-4291-20230424-175728
+            eos:
+              - 4.29.1F
+    desc: 'Training Level 1-3 (TESTING)'
+    name: 'Training Level 1-3 (TESTING)'
+    title: 'Training Level 1-3 (TESTING'
     disk_size: 300
     access: standard
     disable_links: [labguides, jenkins, lab_grading]
