--- a/topologies/base_topo.yml
+++ b/topologies/base_topo.yml
@@ -481,14 +481,14 @@ topologies:
             resources:
               cpu: 48
               ram: 64
-            branch: 2021.3-3.18-l1-3
+            branch: 2022.3-3.19-l1-3
             orderable: true
             image: base-veos-training-l1-3-2022-3-4291-20230424-175728
             eos:
               - 4.29.1F
-    desc: 'Training Level 1-3 (TESTING)'
-    name: 'Training Level 1-3 (TESTING)'
-    title: 'Training Level 1-3 (TESTING'
+    desc: 'Training Level 1-3'
+    name: 'Training Level 1-3'
+    title: 'Training Level 1-3'
     disk_size: 300
     access: standard
     disable_links: [labguides, jenkins, lab_grading]
