updated clab files
updated clab files

--- a/nested-labvm/atd-docker/nginx/src/atd.conf
+++ b/nested-labvm/atd-docker/nginx/src/atd.conf
@@ -51,6 +51,35 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
+    location /host1 {
+        proxy_pass http://192.168.0.1:6001/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_ssl_verify off;
+        proxy_hide_header Content-Security-Policy;
+        proxy_buffering off;
+        proxy_read_timeout  90;
+        client_max_body_size 800M;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $http_connection;
+    }
+    location /host2 {
+        proxy_pass http://192.168.0.1:6002/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_ssl_verify off;
+        proxy_hide_header Content-Security-Policy;
+        proxy_buffering off;
+        proxy_read_timeout  90;
+        client_max_body_size 800M;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $http_connection;
+
+    }
     location /uptime {
         access_log off;
         proxy_pass http://atd-uptime:50010;
