--- a/topologies/training-level-1-3-container-labs/files/apps/uilanding/modules.yaml
+++ b/topologies/training-level-1-3-container-labs/files/apps/uilanding/modules.yaml
@@ -31,6 +31,7 @@ topology:
     BorderLeaf2:
       coords: "599,20,778,101"
       ip: "192.168.0.26"
+servers:
     Host1:
       coords: "184,669,362,756"
       ip: "192.168.0.51"
