--- a/topologies/base_topo.yml
+++ b/topologies/base_topo.yml
@@ -999,9 +999,9 @@ topologies:
             resources:
               cpu: 60
               ram: 90
-            branch: 2021.3-3.17
+            branch: 2022.3-3.19-l1-3
             orderable: true
-            image: base-veos-training-l4-v2-2022-3-4291-20230327-150557
+            image: base-veos-training-l4-v2-2022-3-4291-20230718-151314
             eos:
               - 4.29.1F
     desc: 'Level 4 Training Lab. For use by the Arista Training Team.'
@@ -1023,7 +1023,7 @@ topologies:
               ram: 90
             branch: nested/2022.3
             orderable: true
-            image: base-veos-training-l4-v2-2022-3-4291-20230718-151314 
+            image: base-veos-training-l4-v2-2022-3-4291-20230718-151314
             eos:
               - 4.29.1F
     prod:
@@ -1035,9 +1035,9 @@ topologies:
             resources:
               cpu: 60
               ram: 90
-            branch: 2022.3-3.1
+            branch: 2022.3-3.19-l1-3
             orderable: true
-            image: base-veos-training-l4-v2-2022-3-4291-20230327-150557
+            image: base-veos-training-l4-v2-2022-3-4291-20230718-151314
             eos:
               - 4.29.1F
     desc: 'Level 4 Training Lab. For use by the Arista Training Team.'
