--- a/topologies/training-level-1-3-cisco-labs/topo_build.yml
+++ b/topologies/training-level-1-3-cisco-labs/topo_build.yml
@@ -183,74 +183,7 @@ nodes:
         - neighborDevice: host2
           neighborPort: Ethernet4
           port: Ethernet10
-  - leaf3:
-      ip_addr: 192.168.0.23
-      sys_mac: 00:1c:73:c3:c6:01
-      neighbors:
-        - neighborDevice: leaf4
-          neighborPort: Ethernet1
-          port: Ethernet1
-        - neighborDevice: leaf4
-          neighborPort: Ethernet2
-          port: Ethernet2
-        - neighborDevice: spine1
-          neighborPort: Ethernet5
-          port: Ethernet3
-        - neighborDevice: spine2
-          neighborPort: Ethernet5
-          port: Ethernet4
-        - neighborDevice: spine3
-          neighborPort: Ethernet5
-          port: Ethernet5
-        - neighborDevice: spine4
-          neighborPort: Ethernet5
-          port: Ethernet6
-        - neighborDevice: host3
-          neighborPort: Ethernet1
-          port: Ethernet7
-        - neighborDevice: host3
-          neighborPort: Ethernet3
-          port: Ethernet8
-        - neighborDevice: host4
-          neighborPort: Ethernet1
-          port: Ethernet9
-        - neighborDevice: host4
-          neighborPort: Ethernet3
-          port: Ethernet10
-  - leaf4:
-      ip_addr: 192.168.0.24
-      sys_mac: 00:1c:73:c4:c6:01
-      neighbors:
-        - neighborDevice: leaf3
-          neighborPort: Ethernet1
-          port: Ethernet1
-        - neighborDevice: leaf3
-          neighborPort: Ethernet2
-          port: Ethernet2
-        - neighborDevice: spine1
-          neighborPort: Ethernet6
-          port: Ethernet3
-        - neighborDevice: spine2
-          neighborPort: Ethernet6
-          port: Ethernet4
-        - neighborDevice: spine3
-          neighborPort: Ethernet6
-          port: Ethernet5
-        - neighborDevice: spine4
-          neighborPort: Ethernet6
-          port: Ethernet6
-        - neighborDevice: host3
-          neighborPort: Ethernet2
-          port: Ethernet7
-        - neighborDevice: host3
-          neighborPort: Ethernet4
-          port: Ethernet8
-        - neighborDevice: host4
-          neighborPort: Ethernet2
-          port: Ethernet9
-        - neighborDevice: host4
-          neighborPort: Ethernet4
-          port: Ethernet10
+
   - borderleaf1:
       ip_addr: 192.168.0.25
       sys_mac: 00:1c:73:c5:c6:01
@@ -334,21 +267,107 @@ servers:
       port : 6001
       neighbors:
         - neighborDevice: leaf1
-          neighborPort: Ethernet11
+          neighborPort: Ethernet7
           port: Ethernet1
         - neighborDevice: leaf2
-          neighborPort: Ethernet11
+          neighborPort: Ethernet7
           port: Ethernet2
+        - neighborDevice: leaf1
+          neighborPort: Ethernet8
+          port: Ethernet3
+        - neighborDevice: leaf2
+          neighborPort: Ethernet8
+          port: Ethernet4
   - host2:
       image_name: "gcr.io/atd-testdrivetraining-dev/hosts-gui/host2:latest"
       ip_addr: 192.168.0.52
       port : 6002
       neighbors:
         - neighborDevice: leaf1
-          neighborPort: Ethernet12
-          port: Ethernet2
-        - neighborDevice: leaf2
-          neighborPort: Ethernet12
+          neighborPort: Ethernet9
           port: Ethernet1
+        - neighborDevice: leaf2
+          neighborPort: Ethernet9
+          port: Ethernet2
+        - neighborDevice: leaf1
+          neighborPort: Ethernet10
+          port: Ethernet3
+        - neighborDevice: leaf2
+          neighborPort: Ethernet10
+          port: Ethernet4
 additional_ssh_nodes:
 additional_clab_nodes:
+  - leaf3:
+      kind : vr-n9kv
+      image_name: "gcr.io/atd-testdrivetraining-dev/vr-n9kv:9.3.3"
+      port : 22
+      ip_addr: 192.168.0.23
+      sys_mac: 00:1c:73:c3:c6:01
+      neighbors:
+        - neighborDevice: leaf4
+          neighborPort: Ethernet1
+          port: Ethernet1
+        - neighborDevice: leaf4
+          neighborPort: Ethernet2
+          port: Ethernet2
+        - neighborDevice: spine1
+          neighborPort: Ethernet5
+          port: Ethernet3
+        - neighborDevice: spine2
+          neighborPort: Ethernet5
+          port: Ethernet4
+        - neighborDevice: spine3
+          neighborPort: Ethernet5
+          port: Ethernet5
+        - neighborDevice: spine4
+          neighborPort: Ethernet5
+          port: Ethernet6
+        - neighborDevice: host3
+          neighborPort: Ethernet1
+          port: Ethernet7
+        - neighborDevice: host3
+          neighborPort: Ethernet3
+          port: Ethernet8
+        - neighborDevice: host4
+          neighborPort: Ethernet1
+          port: Ethernet9
+        - neighborDevice: host4
+          neighborPort: Ethernet3
+          port: Ethernet10
+  - leaf4:
+      kind : vr-n9kv
+      image_name: "gcr.io/atd-testdrivetraining-dev/vr-n9kv:9.3.3"
+      ip_addr: 192.168.0.24
+      port : 22
+      sys_mac: 00:1c:73:c4:c6:01
+      neighbors:
+        - neighborDevice: leaf3
+          neighborPort: Ethernet1
+          port: Ethernet1
+        - neighborDevice: leaf3
+          neighborPort: Ethernet2
+          port: Ethernet2
+        - neighborDevice: spine1
+          neighborPort: Ethernet6
+          port: Ethernet3
+        - neighborDevice: spine2
+          neighborPort: Ethernet6
+          port: Ethernet4
+        - neighborDevice: spine3
+          neighborPort: Ethernet6
+          port: Ethernet5
+        - neighborDevice: spine4
+          neighborPort: Ethernet6
+          port: Ethernet6
+        - neighborDevice: host3
+          neighborPort: Ethernet2
+          port: Ethernet7
+        - neighborDevice: host3
+          neighborPort: Ethernet4
+          port: Ethernet8
+        - neighborDevice: host4
+          neighborPort: Ethernet2
+          port: Ethernet9
+        - neighborDevice: host4
+          neighborPort: Ethernet4
+          port: Ethernet10
