added new devices to containerlabs and fixed cvp config
added new devices to containerlabs and fixed cvp config

--- a/topologies/training-level-1-3-container-labs/files/cvp/cvp_info.yaml
+++ b/topologies/training-level-1-3-container-labs/files/cvp/cvp_info.yaml
@@ -24,6 +24,8 @@ cvp_info:
     Hosts:
       parent: Tenant
       nodes:
+      - host1
+      - host2
       - host3
       - host4
   snapshots:
