added 4 linux hosts
added 4 linux hosts

--- a/topologies/training-level-1-3-container-labs/files/apps/uilanding/modules.yaml
+++ b/topologies/training-level-1-3-container-labs/files/apps/uilanding/modules.yaml
@@ -2,41 +2,61 @@ topology:
   image: "atd-topo.png"
   nodes:
     Spine1:
-      coords: "43,231,220,314"
+      coords: "419,814,18,587"
       ip: "192.168.0.11"
     Spine2:
-      coords: "324,227,503,315"
+      coords: "982,576,1420,809"
       ip: "192.168.0.12"
     Spine3:
-      coords: "596,231,777,316"
+      coords: "1524,579,1962,796"
       ip: "192.168.0.13"
     Spine4:
-      coords: "880,233,1056,315"
+      coords:  "2559,576,2947,814"
       ip: "192.168.0.14"
     Leaf1:
-      coords: "42,518,219,601"
+      coords: "24,1139,432,1383"
       ip: "192.168.0.21"
     Leaf2:
-      coords: "324,519,502,603"
+      coords: "951,1157,1393,1372" 
       ip: "192.168.0.22"
     Leaf3:
-      coords: "597,519,779,605"
+      coords: "1519,1165,1970,1364"
       ip: "192.168.0.23"
     Leaf4:
-      coords: "882,522,1055,603"
+      coords: "2541,1184,2944,1390"
       ip: "192.168.0.24"
     BorderLeaf1:
-      coords: "501,100,323,20"
+      coords: "999,150,1431,422" 
       ip: "192.168.0.25"
-    BorderLeaf2:
-      coords: "599,20,778,101"
+    BorderLeaf2: 
+      coords: "1972,414,1556,152"
       ip: "192.168.0.26"
+    Host1:
+      coords: "39,1485,419,1705" 
+      ip: "192.168.0.51"
+    Host2:
+      coords: "977,1472,1427,1686"
+      ip: "192.168.0.52"
+    Host3:
+      coords: "1543,1485,1941,1681" 
+      ip: "192.168.0.53"
+    Host4:
+      coords: "2528,1498,2952,1689" 
+      ip: "192.168.0.54"
   servers:
-      Host1:
-        coords: "28,669,225,768"
-        ip: "192.168.0.51"
+      Host5:
+        coords: "492,1482,830,1728"
+        ip: "192.168.0.101"
         port : 6001
-      Host2:
-        coords: "312,668,504,773"
-        ip: "192.168.0.52"
+      Host6:
+        coords: "490,1757,856,2011" 
+        ip: "192.168.0.102"
         port : 6002
+      Host7:
+        coords: "2053,1487,2402,1720"
+        ip: "192.168.0.103"
+        port : 6003
+      Host8:
+        coords: "2069,1778,2410,2024,2923,1938"
+        ip: "192.168.0.104"
+        port : 6004
