--- a/topologies/training-level-1-3-container-labs/files/cvp/cvp_info.yaml
+++ b/topologies/training-level-1-3-container-labs/files/cvp/cvp_info.yaml
@@ -58,3 +58,7 @@ cvp_info:
         - host3-base
       host4:
         - host4-base
+      host1:
+        - host1-base
+      host2:
+        - host2-base
