added topoimage and coords for cisco labs
added topoimage and coords for cisco labs

--- a/topologies/training-level-1-3-cisco-labs/files/apps/uilanding/modules.yaml
+++ b/topologies/training-level-1-3-cisco-labs/files/apps/uilanding/modules.yaml
@@ -2,41 +2,76 @@ topology:
   image: "atd-topo.png"
   nodes:
     Spine1:
-      coords: "43,231,220,314"
+      coords: "17,545,148,623"
       ip: "192.168.0.11"
     Spine2:
-      coords: "324,227,503,315"
+      coords: "368,548,507,622"
       ip: "192.168.0.12"
     Spine3:
-      coords: "596,231,777,316"
+      coords: "560,548,706,619"
       ip: "192.168.0.13"
     Spine4:
-      coords: "880,233,1056,315"
+      coords: "937,553,1079,627"
       ip: "192.168.0.14"
     Leaf1:
-      coords: "42,518,219,601"
+      coords: "15,754,150,832"
       ip: "192.168.0.21"
     Leaf2:
-      coords: "324,519,502,603"
+      coords: "361,754,506,825"
       ip: "192.168.0.22"
     Leaf3:
-      coords: "597,519,779,605"
+      coords: "559,760,705,835"
       ip: "192.168.0.23"
     Leaf4:
-      coords: "882,522,1055,603"
+      coords: "927,761,1074,833"
       ip: "192.168.0.24"
     BorderLeaf1:
-      coords: "501,100,323,20"
+      coords: "368,402,502,470"
       ip: "192.168.0.25"
     BorderLeaf2:
-      coords: "599,20,778,101"
+      coords: "566,401,712,467,990,417"
       ip: "192.168.0.26"
+    host1:
+      coords: "563,871,704,939"
+      ip: "192.168.0.51"
+    host2:
+      coords: "930,873,1075,943"
+      ip: "192.168.0.52" 
+    host3:
+      coords: "563,871,704,939"
+      ip: "192.168.0.52"
+    host4:
+      coords: "930,873,1075,943"
+      ip: "192.168.0.54" 
+    host9:
+      coords: "368,6,517,85"
+      ip: "192.168.0.55"
+    host10:
+      coords: "560,9,722,86"
+      ip: "192.168.0.56" 
+    ciscoL1:
+      coords: "370,120,513,197"
+      ip: "192.168.0.121" 
+    ciscoL2:
+      coords: "575,121,719,196"
+      ip: "192.168.0.122" 
+    ciscoS1:
+      coords: "475,292,608,365"
+      ip: "192.168.0.111" 
   servers:
-      Host1:
-        coords: "28,669,225,768"
-        ip: "192.168.0.51"
-        port : 6001
-      Host2:
-        coords: "312,668,504,773"
-        ip: "192.168.0.52"
-        port : 6002
+    host5:
+      coords: "178,869,302,962"
+      ip: "192.168.0.101"
+      port : 6001
+    host6:
+      coords: "180,975,311,1061"
+      ip: "192.168.0.102" 
+      port : 6002
+    host7:
+      coords: "750,877,876,957"
+      ip: "192.168.0.103"
+      port : 6003
+    host8:
+      coords: "738,975,872,1065,697,1066"
+      ip: "192.168.0.104" 
+      port : 6004
