fix cisco topo_buold file
fix cisco topo_buold file

--- a/topologies/training-level-1-3-cisco-labs/topo_build.yml
+++ b/topologies/training-level-1-3-cisco-labs/topo_build.yml
@@ -445,7 +445,7 @@ additional_clab_nodes:
         - neighborDevice: Borderleaf1
           neighborPort: Ethernet7
           port: Ethernet3
-        - neighborDevice: 
+        - neighborDevice: Borderleaf2
           neighborPort: Ethernet7
           port: Ethernet4
   - CiscoL1:
