fix topobuild for ciscolabs
Borderleaf2

--- a/topologies/training-level-1-3-cisco-labs/topo_build.yml
+++ b/topologies/training-level-1-3-cisco-labs/topo_build.yml
@@ -495,7 +495,7 @@ additional_clab_nodes:
         - neighborDevice: CiscoS1
           neighborPort: Ethernet2
           port: Ethernet3
-        - neighborDevice: 
+        - neighborDevice: Borderleaf2
           neighborPort: Ethernet8
           port: Ethernet4
         - neighborDevice: host9
