--- a/topologies/base_topo.yml
+++ b/topologies/base_topo.yml
@@ -630,9 +630,16 @@ topologies:
               - 4.26.0F
           2021.3.0:
             schema: 2
-            resources:
-              cpu: 40
-              ram: 80
+            resources_eos:
+              cpu: 32
+              ram: 64
+              disk: 50
+              image: base-veos-training-l3-2021-3-20221103-161339
+            resources_cvp:
+              cpu: 28
+              ram: 36
+              disk: 300
+              image: base-veos-training-l3-2021-3-20221103-161339
             branch: nested/2021.3
             orderable: true
             image: base-veos-training-l3-2021-3-20221103-161339
