--- a/nested-labvm/atd-docker/nginx/src/atd.conf
+++ b/nested-labvm/atd-docker/nginx/src/atd.conf
@@ -14,6 +14,7 @@ server {
 }
 server {
     listen 443 ssl;
+    http2 on;
     ssl_certificate           /etc/nginx/certs/fullchain.pem;
     ssl_certificate_key       /etc/nginx/certs/privkey.pem;
     ssl_session_cache  builtin:1000  shared:SSL:10m;
@@ -130,7 +131,7 @@ server {
         grpc_send_timeout 14400;
         client_body_timeout 14400;
     }
-    location ~ ^/(cv|grpc-web|cvpservice|static|api|web) {
+    location ~ ^/(cv|grpc-web|cvpservice|static|api|web|assets) {
         proxy_pass https://192.168.0.5;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
