--- a/nested-labvm/atd-docker/docker-compose.yml
+++ b/nested-labvm/atd-docker/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 services:
   uptime:
     container_name: atd-uptime
-    image: us.gcr.io/atd-testdrivetraining-dev/atddocker_uptime:1.0.0
+    image: us.gcr.io/beta-atds/atddocker_uptime:2.0.0
     restart: always
     environment:
       - PYTHONUNBUFFERED=1
@@ -12,7 +12,7 @@ services:
       - atd_nginx
   conftopo:
     container_name: atd-conftopo
-    image: us.gcr.io/atd-testdrivetraining-dev/atddocker_conftopo:1.0.0
+    image: us.gcr.io/beta-atds/atddocker_conftopo:2.0.0
     restart: always
     networks:
       - atd_nginx
@@ -22,9 +22,19 @@ services:
       - /etc/atd:/etc/atd:rw
       - /opt/atd/topologies:/opt/atd/topologies:ro
       - /home/arista/arista-dir:/home/arista:rw
+  alertapi:
+    container_name: atd-alert
+    image: us.gcr.io/beta-atds/atddocker_alertapi:2.0.0
+    restart: always
+    ports:
+      - 5000:5000
+    networks:
+      - atd_nginx
+    environment:
+      - PYTHONUNBUFFERED=1
   login:
     container_name: atd-login
-    image: us.gcr.io/atd-testdrivetraining-dev/atddocker_login:1.0.11
+    image: us.gcr.io/beta-atds/atddocker_login:2.0.0
     user: $ArID:$ArGD
     restart: always
     hostname: devbox
@@ -39,9 +49,10 @@ services:
       - /home/arista/.ssh:/home/arista/.ssh:rw
       - /opt/sftp/uploads:/opt/sftp:ro
       - /var/run/libvirt/libvirt-sock:/var/run/libvirt/libvirt-sock:ro
+      - /var/lib/libvirt/images/veos:/var/lib/libvirt/images/veos:rw
   cvpupdater:
     container_name: atd-cvpupdater
-    image: us.gcr.io/atd-testdrivetraining-dev/atddocker_cvpupdater:1.0.0
+    image: us.gcr.io/beta-atds/atddocker_cvpupdater:2.0.0
     user: $ArID:$ArGD
     restart: always
     environment:
@@ -53,18 +64,19 @@ services:
       - cvp_dir:/home/arista/CVP_DATA:rw
   gitconfigletsync:
     container_name: atd-gitconfigletsync
-    image: us.gcr.io/atd-testdrivetraining-dev/atddocker_gitconfigletsync:1.0.0
+    image: us.gcr.io/beta-atds/atddocker_gitconfigletsync:2.0.0
     user: $ArID:$ArGD
     restart: always
     environment:
       - PYTHONUNBUFFERED=1
     volumes:
       - /etc/atd:/etc/atd:ro
+      - /home/arista/arista-dir/cvp:/home/arista/cvp:ro
       - /opt/atd:/opt/atd:ro
       - cvp_dir:/home/arista/CVP_DATA:rw
   kvmbuilder:
     container_name: atd-kvmbuilder
-    image: us.gcr.io/atd-testdrivetraining-dev/atddocker_kvmbuilder:1.0.0
+    image: us.gcr.io/beta-atds/atddocker_kvmbuilder:2.0.0
     user: $AtID:$AtGD
     restart: on-failure
     environment:
@@ -73,19 +85,19 @@ services:
       - /etc/atd:/etc/atd:ro
       - /opt/atd:/opt/atd:ro
       - /home/atdadmin/KVM_scripts:/home/atdadmin/kvm:rw
-  ceosbuilder:
-    container_name: atd-ceosbuilder
-    image: us.gcr.io/atd-testdrivetraining-dev/atddocker_ceosbuilder:1.0.0
-    restart: on-failure
-    environment:
-      - PYTHONUNBUFFERED=1
-    volumes:
-      - /etc/atd:/etc/atd:ro
-      - /opt/atd:/opt/atd:ro
-      - /opt/ceos:/opt/ceos:rw
+  # ceosbuilder:
+  #   container_name: atd-ceosbuilder
+  #   image: us.gcr.io/beta-atds/atddocker_ceosbuilder:2.3.4
+  #   restart: on-failure
+  #   environment:
+  #     - PYTHONUNBUFFERED=1
+  #   volumes:
+  #     - /etc/atd:/etc/atd:ro
+  #     - /opt/atd:/opt/atd:ro
+  #     - /opt/ceos:/opt/ceos:rw
   uilanding:
     container_name: atd-uilanding
-    image: us.gcr.io/atd-testdrivetraining-dev/atddocker_uilanding:1.0.7
+    image: us.gcr.io/beta-atds/atddocker_uilanding:2.0.0
     restart: always
     environment:
       - PYTHONUNBUFFERED=1
@@ -93,13 +105,11 @@ services:
       - /etc/atd:/etc/atd:ro
       - /opt/atd:/opt/atd:ro
       - /home/arista/arista-dir/apps/uilanding:/opt/modules:ro
-      - /home/arista/arista-dir/menus:/opt/menus:rw
-      - /var/run/docker.sock:/var/run/docker.sock:ro
     networks:
       - atd_nginx
   labguides:
     container_name: atd-labguides
-    image: us.gcr.io/atd-testdrivetraining-dev/atddocker_labguides:1.0.0
+    image: us.gcr.io/beta-atds/atddocker_labguides:2.0.0
     restart: always
     environment:
       - PYTHONUNBUFFERED=1
@@ -110,7 +120,7 @@ services:
       - atd_nginx
   freerad:
     container_name: atd-freeradius
-    image: us.gcr.io/atd-testdrivetraining-dev/atddocker_freerad:1.0.0
+    image: us.gcr.io/beta-atds/atddocker_freerad:2.0.0
     restart: always
     volumes:
       - /opt/atd/nested-labvm/atd-docker/freeradius/src/mods-config/files/authorize:/etc/freeradius/mods-config/files/authorize:ro
@@ -119,12 +129,13 @@ services:
       - "1813:1813/udp"
   nginx:
     container_name: atd-nginx
-    image: us.gcr.io/atd-testdrivetraining-dev/atddocker_nginx:1.0.4
+    image: us.gcr.io/beta-atds/atddocker_nginx:2.0.0
     restart: always
     depends_on:
       - uilanding
       - jenkins
       - coder
+      - nautobot
     ports:
       - "80:80/tcp"
       - "443:443/tcp"
@@ -132,11 +143,12 @@ services:
       - nginx_log:/var/log/nginx:rw
       - /etc/atd:/etc/atd:ro
       - /opt/nginx/certs:/opt/nginx/certs:ro
+      - /opt/atd/nested-labvm/atd-docker/nginx/src/atd.conf:/etc/nginx/conf.d/atd.conf:ro
     networks:
       - atd_nginx
   monitor:
     container_name: atd-monitor
-    image: us.gcr.io/atd-testdrivetraining-dev/atddocker_monitor:1.0.0
+    image: us.gcr.io/beta-atds/atddocker_monitor:2.0.0
     restart: always
     environment:
       - PYTHONUNBUFFERED=1
@@ -148,7 +160,7 @@ services:
       - /var/log/wtmp:/var/log/wtmp:ro
   jenkins:
     container_name: atd-jenkins
-    image: us.gcr.io/atd-testdrivetraining-dev/atddocker_jenkins:1.0.0
+    image: us.gcr.io/beta-atds/atddocker_jenkins:2.0.0
     restart: always
     environment:
       - JENKINS_OPTS="--prefix=/jenkins"
@@ -160,7 +172,7 @@ services:
       - ./jenkins/src/groovy/users.groovy.override:/usr/share/jenkins/ref/init.groovy.d/users.groovy.override:rw
   coder:
     container_name: atd-coder
-    image: us.gcr.io/atd-testdrivetraining-dev/atddocker_coder:1.0.1
+    image: us.gcr.io/beta-atds/atddocker_coder:2.0.0
     restart: always
     user: $ArID:$ArGD
     command: /home/coder/project
@@ -176,9 +188,10 @@ services:
       - /home/arista/arista-dir/.ansible.cfg:/home/coder/.ansible.cfg:rw
       - /opt/sftp/uploads:/opt/sftp:ro
       - /var/run/libvirt/libvirt-sock:/var/run/libvirt/libvirt-sock:ro
+      - /var/lib/libvirt/images/veos:/var/lib/libvirt/images/veos:rw
   ssh:
     container_name: atd-ssh
-    image: us.gcr.io/atd-testdrivetraining-dev/atddocker_ssh:1.0.0
+    image: us.gcr.io/beta-atds/atddocker_ssh:2.0.0
     restart: always
     networks:
       - atd_nginx
@@ -194,6 +207,87 @@ services:
       - "/home/arista/arista-dir/apps/webui:/config:rw"
     networks:
       - atd_nginx
+  nautobot:
+    container_name: atd-nbot-ui
+    image: "networktocode/nautobot:1.5-py3.9"
+    env_file:
+      - ./nautobot/nbot-local.env
+    networks:
+      - atd_nginx
+    ports:
+      - "8080:8080"
+    restart: "unless-stopped"
+    volumes:
+      - nautobot:/opt/nautobot:rw
+      - "/opt/atd:/opt/atd:rw"
+  nautobot-worker:
+    container_name: atd-nbot-worker
+    image: "networktocode/nautobot:1.5-py3.9"
+    entrypoint: "sh -c 'nautobot-server celery worker'"
+    healthcheck:
+      interval: "5s"
+      timeout: "5s"
+      start_period: "5s"
+      retries: 3
+      test: ["CMD", "nautobot-server", "health_check"]
+    env_file:
+      - ./nautobot/nbot-local.env
+    volumes:
+      - /opt/atd/nested-labvm/atd-docker/nautobot/nautobot_config.py:/opt/atd/nested-labvm/atd-docker/nautobot/nautobot_config.py:ro
+    depends_on:
+      - "nautobot"
+      - "redis-queue"
+    restart: "unless-stopped"
+  redis-cacheops:
+    container_name: atd-nbot-redis-cacheops
+    image: "redis:alpine"
+    env_file:
+      - ./nautobot/nbot-local.env
+    command:
+      - "sh"
+      - "-c"  # this is to evaluate the $REDIS_PASSWORD from the env
+      - "redis-server --appendonly yes --requirepass $$NAUTOBOT_REDIS_PASSWORD"  ## $$ because of docker-compose
+    restart: "unless-stopped"
+  nautobot-beat:
+    container_name: atd-nbot-beat
+    image: "networktocode/nautobot:1.5-py3.9"
+    entrypoint: "sh -c 'nautobot-server celery beat'"
+    healthcheck:
+      interval: "5s"
+      timeout: "5s"
+      start_period: "5s"
+      retries: 3
+      test: ["CMD", "nautobot-server", "health_check"]
+    volumes:
+      - /opt/atd/nested-labvm/atd-docker/nautobot/nautobot_config.py:/opt/atd/nested-labvm/atd-docker/nautobot/nautobot_config.py:ro
+    depends_on:
+      - "nautobot"
+      - "redis-queue"
+    env_file:
+      - ./nautobot/nbot-local.env
+    restart: "unless-stopped"
+  redis-queue:
+    container_name: atd-nbot-redis-queue
+    image: "redis:alpine"
+    ports:
+      - "6379:6379"
+    env_file:
+      - ./nautobot/nbot-local.env
+    command:
+      - "sh"
+      - "-c"  # this is to evaluate the $REDIS_PASSWORD from the env
+      - "redis-server --appendonly yes --requirepass $$NAUTOBOT_REDIS_PASSWORD"  ## $$ because of docker-compose
+    restart: "unless-stopped"
+  postgres:
+    container_name: atd-nbot-postgres
+    image: "postgres:10"
+    ports:
+      - "5432:5432"
+    env_file:
+      - ./nautobot/nbot-local.env
+    volumes:
+      - "postgres_data:/var/lib/postgresql/data"
+    restart: "unless-stopped"
 networks:
   atd_nginx:
 volumes:
@@ -202,3 +296,5 @@ volumes:
   jenkins_home:
   cvp_dir:
   nginx_log:
+  postgres_data:
+  nautobot:
