--- a/nested-labvm/atd-docker/nginx/src/atd.conf
+++ b/nested-labvm/atd-docker/nginx/src/atd.conf
@@ -14,6 +14,7 @@ server {
 }
 server {
     listen 443 ssl;
+    http2 on;
     ssl_certificate           /etc/nginx/certs/fullchain.pem;
     ssl_certificate_key       /etc/nginx/certs/privkey.pem;
     ssl_session_cache  builtin:1000  shared:SSL:10m;
@@ -44,6 +45,13 @@ server {
         proxy_set_header Authorization $http_authorization;
         proxy_pass_header  Authorization;
     }
+    location /alert {
+        proxy_pass http://atd-alert:5000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
     location /jenkins {
         proxy_pass http://atd-jenkins:8080;
         proxy_set_header Host $host;
@@ -51,6 +59,22 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
+    location /ipam {
+        proxy_pass http://atd-nbot-ui:8080/;
+        rewrite /ipam/?(.*)  /$1  break;
+        sub_filter "/static" "/ipam/static";
+        sub_filter "/api" "/ipam/api";
+        sub_filter "/login" "/ipam/login";
+        sub_filter "/logout" "/ipam/logout";
+        sub_filter "/graphql" "/ipam/graphql";
+        sub_filter "/nautobot/" "/ipam/nautobot/";
+        sub_filter "/search" "/ipam/search";
+        sub_filter "next=/" "next=/ipam/";
+        sub_filter 'href="/' 'href="/ipam/';
+        sub_filter_once off;
+        proxy_redirect / /ipam/;
+     }
+
     location /uptime {
         access_log off;
         proxy_pass http://atd-uptime:50010;
@@ -76,7 +100,7 @@ server {
     location /ssh {
         proxy_pass http://atd-ssh:2222;
         proxy_http_version 1.1;
-        proxy_read_timeout 120;
+        proxy_read_timeout 600;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection $http_connection;
         proxy_set_header  Host $host;
@@ -101,7 +125,7 @@ server {
         grpc_send_timeout 14400;
         client_body_timeout 14400;
     }
-    location ~ ^/(cv|grpc-web|cvpservice|static|api|web) {
+    location ~ ^/(cv|grpc-web|cvpservice|static|api|web|assets) {
         proxy_pass https://192.168.0.5;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -115,4 +139,4 @@ server {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection $http_connection;
     }
-  }
+}
